--- a/style.css
+++ b/style.css
@@ -76,6 +76,15 @@ card .cover {
     cursor: pointer;
 }
 
+card img {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    border-radius: 0.375rem;
+}
+
 @keyframes disappear {
     0% {
         opacity: 1;
